@@ -10,7 +10,7 @@
 
 REQUEST=context.REQUEST
 from Products.ATContentTypes import ATCTMessageFactory as _
-from Products.CMFPlone.utils import transaction_note
+from Products.Archetypes.utils import transaction_note
 
 if field == 'no_sort':
     context.removeSortCriterion()
