@@ -2,7 +2,6 @@ from Testing import ZopeTestCase # side effect import. leave it here.
 from Products.ATContentTypes.tests import atcttestcase
 
 from Products.CMFCore.utils import getToolByName
-from Products.CMFPlone.CatalogTool import CatalogTool
 from Products.ATContentTypes.config import TOOLNAME
 from Products.ATContentTypes.interfaces import IATCTTopicsTool
 from zope.interface.verify import verifyObject
@@ -121,7 +120,7 @@ class TestTool(atcttestcase.ATCTSiteTestCase):
     def test_all_indexes(self):
         # Ensure that the tool includes all indexes in the catalog
         t = self.tool
-        cat = getToolByName(self.tool, CatalogTool.id)
+        cat = getToolByName(self.tool, 'portal_catalog')
         indexes = [field for field in cat.indexes()]
         init_indexes = list(t.getIndexes())
         unique_indexes = [i for i in indexes if i not in init_indexes]
@@ -130,7 +129,7 @@ class TestTool(atcttestcase.ATCTSiteTestCase):
 
     def test_change_catalog_index(self):
         t = self.tool
-        cat = getToolByName(self.tool, CatalogTool.id)
+        cat = getToolByName(self.tool, 'portal_catalog')
         #add
         error = True
         cat.manage_addIndex('nonsense', 'FieldIndex')
@@ -230,7 +229,7 @@ class TestTool(atcttestcase.ATCTSiteTestCase):
     def test_all_metadata(self):
         # Ensure that the tool includes all metadata in the catalog
         t = self.tool
-        cat = getToolByName(self.tool, CatalogTool.id)
+        cat = getToolByName(self.tool, 'portal_catalog')
         metadata = [field for field in cat.schema()]
         init_metadata = list(t.getAllMetadata())
         unique_metadata = [i for i in metadata if i not in init_metadata]
@@ -239,7 +238,7 @@ class TestTool(atcttestcase.ATCTSiteTestCase):
 
     def test_change_catalog_schema(self):
         t = self.tool
-        cat = getToolByName(self.tool, CatalogTool.id)
+        cat = getToolByName(self.tool, 'portal_catalog')
         #add
         error = True
         cat.manage_addColumn('nonsense')
